--- a/pageSetup.html
+++ b/pageSetup.html
@@ -1,14 +1,23 @@
 <!doctype html>
 <html lang="en">
-<head>
+<head> 
     <meta charset="UTF-8">
     <title>
         Movie
     </title>
+    <style>
+        body {background-color: powderblue;}
+        h1   {color: black;}
+        h2   {color:darkolivegreen}
+        h3   {color:deeppink}
+        h4   {color:dimgrey}
+        h5   {color:indigo}
+        p    {color: red;}
+    </style>
 </head>
 <body>
     <img scr={{getPoster}} alt = "Movie Poster">
-    <h1>{{getTitle}}</h1>
+    <h1>{{getTitle}}</h1> 
     <h2>
         {{getTagline}}
     </h2>
